environment variable (.env) set, csrf token integrated, flash policy configured, books controller bypass fixed through policy

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.4.1",
     "connect-mongo": "^2.0.3",
+    "dotenv": "^8.2.0",
     "grunt": "1.0.4",
     "jquery": "^3.4.1",
-    "mongodb": "^3.5.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sails": "^1.2.3",
